# mlops

./: .gitignore  .pre-commit-config.yaml  README.md  commands.py  config.yaml  infer_labels.csv.dvc  infer_scores.csv.dvc  main.py  model_base.ckpt.dvc  pyproject.toml
.dvc/: config
utils/: batch_loader.py  config.py  metrics.py  model.py  test.py  train.py
